--- a/requirements.txt
+++ b/requirements.txt
@@ -1,354 +1,3 @@
-accelerate==1.6.0
-aiocache==0.12.3
-aiofiles==23.2.1
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.13
-aiosignal==1.3.1
-alembic==1.14.1
-amqp==5.2.0
-annotated-types==0.7.0
-anthropic==0.45.2
-anyio==3.7.1
-appdirs==1.4.4
-APScheduler==3.11.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.8.1
-async-timeout==5.0.1
-attrs==24.2.0
-Authlib==1.4.1
-av==12.1.0
-backoff==2.2.1
-bbpb==1.4.2
-bcrypt==4.2.1
-beautifulsoup4==4.13.3
-bidict==0.23.1
-billiard==4.2.1
-bitarray==3.0.0
-black==25.1.0
-blinker==1.8.2
-Brotli==1.1.0
-bsdiff4==1.2.6
-build==1.2.2.post1
-cachetools==5.5.1
-certifi==2025.4.26
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-chroma-hnswlib==0.7.6
-chromadb==0.6.3
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colbert-ai==0.2.21
-colorama==0.4.6
-colorclass==2.2.2
-coloredlogs==15.0.1
-comfyui_frontend_package==1.12.11
-compressed_rtf==1.0.6
-concurrent-log-handler==0.9.25
-croniter==3.0.3
-cryptography==44.0.0
-ctranslate2==4.5.0
-dataclasses-json==0.6.7
-datasets==3.2.0
-defusedxml==0.7.1
-Deprecated==1.2.18
-diffusers==0.33.1
-dill==0.3.9
-distlib==0.3.9
-distro==1.9.0
-dnspython==2.7.0
-docker==7.1.0
-docx2txt==0.8
-dotenv==0.9.9
-duckduckgo_search==7.3.0
-durationpy==0.9
-easygui==0.98.3
-ebcdic==1.1.1
-ecdsa==0.19.0
-einops==0.8.0
-email_validator==2.2.0
-emoji==2.14.1
-et_xmlfile==2.0.0
-eval_type_backport==0.2.2
-eventlet==0.39.0
-Events==0.5
-exif==1.6.1
-extract-msg==0.52.0
-fake-useragent==2.0.3
-fastapi==0.104.1
-fastapi-cli==0.0.7
-faster-whisper==1.1.1
-ffmpy==0.5.0
-filelock==3.17.0
-filetype==1.2.0
-Flask==3.0.3
-Flask-Cors==5.0.0
-Flask-SocketIO==5.5.1
-flatbuffers==25.1.24
-fonttools==4.55.8
-fpdf2==2.8.2
-frozenlist==1.4.1
-fs==2.4.16
-fsspec==2025.2.0
-ftfy==6.3.1
-gcp-storage-emulator==2024.8.3
-git-python==1.0.3
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
-google-api-python-client==2.160.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-google-cloud-core==2.4.1
-google-cloud-storage==3.0.0
-google-crc32c==1.6.0
-google-generativeai==0.8.4
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-gphotos-sync==3.2.5
-gpmc @ https://github.com/xob0t/google_photos_mobile_client/archive/refs/heads/main.zip#sha256=34c6ae6f0544df5d70fb0c72d6a137545d6e183d422e6c3ed06379ef4754e6ca
-gradio==5.23.0
-gradio_client==1.8.0
-greenlet==3.1.1
-groovy==0.1.2
-grpcio==1.70.0
-grpcio-status==1.70.0
-grpcio-tools==1.70.0
-gunicorn==23.0.0
-h11==0.14.0
-hachoir==3.3.0
-hpack==4.1.0
-html5lib==1.1
-httpcore==1.0.7
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.25.2
-httpx-sse==0.4.0
-huggingface-hub==0.28.1
-humanfriendly==10.0
-hyperframe==6.1.0
-idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.5.2
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jiter==0.8.2
-jmespath==1.0.1
-joblib==1.4.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==3.0.0
-kombu==5.4.2
-kornia==0.8.0
-kornia_rs==0.1.8
-kubernetes==32.0.0
-langchain==0.3.17
-langchain-community==0.3.16
-langchain-core==0.3.33
-langchain-ollama==0.2.3
-langchain-text-splitters==0.3.5
-langdetect==1.0.9
-langsmith==0.3.11
-lark==1.2.2
-ldap3==2.9.1
-lxml==5.3.0
-Mako==1.3.9
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.26.1
-mccabe==0.7.0
-mdurl==0.1.2
-mmh3==5.1.0
-monotonic==1.6
-mpmath==1.3.0
-msoffcrypto-tool==5.4.2
-multidict==6.1.0
-multiprocess==0.70.17
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-ninja==1.11.1.3
-nltk==3.9.1
-numpy==1.26.2
-oauthlib==3.2.2
-olefile==0.47
-oletools==0.60.2
-ollama==0.4.7
-onnxruntime==1.20.1
-openai==1.61.0
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-openpyxl==3.1.5
-opensearch-py==2.8.0
-opentelemetry-api==1.30.0
-opentelemetry-exporter-otlp-proto-common==1.30.0
-opentelemetry-exporter-otlp-proto-grpc==1.30.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-instrumentation-asgi==0.48b0
-opentelemetry-instrumentation-fastapi==0.48b0
-opentelemetry-proto==1.30.0
-opentelemetry-sdk==1.30.0
-opentelemetry-semantic-conventions==0.51b0
-opentelemetry-util-http==0.48b0
-orjson==3.10.15
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.3
-passlib==1.7.4
-pathspec==0.12.1
-pcodedmp==1.2.6
-peewee==3.17.8
-peewee-migrate==1.13.0
-pgvector==0.3.6
-pillow==11.1.0
-platformdirs==4.3.6
-PlexAPI==4.15.16
-pluggy==1.5.0
-plum-py==0.8.7
-portalocker==3.1.1
-posthog==3.11.0
-primp==0.11.0
-prompt_toolkit==3.0.48
-propcache==0.2.0
-proto-plus==1.26.0
-protobuf==5.29.3
-psutil==6.1.0
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-py-partiql-parser==0.6.1
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyclipper==1.3.0.post6
-pycodestyle==2.12.1
-pycparser==2.22
-pycryptodome==3.22.0
-pydantic==2.10.6
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-pydocstyle==6.3.0
-pydub==0.25.1
-pyflakes==3.2.0
-Pygments==2.19.1
-PyJWT==2.10.1
-pylama==8.4.1
-pymilvus==2.5.4
-pymongo==4.11
-PyMySQL==1.1.1
-pypandoc==1.15
-pyparsing==3.2.1
-pypdf==5.2.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-pytest==8.3.3
-pytest-docker==3.1.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-engineio==4.11.2
-python-iso639==2025.1.28
-python-jose==3.3.0
-python-magic==0.4.27
-python-multipart==0.0.6
-python-oxmsg==0.0.2
-python-pptx==1.0.2
-python-socketio==5.12.1
-python-telegram-bot==22.0
-pytube==15.0.0
-pytz==2024.2
-pywin32==308
-pywinpty==2.0.15
-pyxlsb==1.0.10
-PyYAML==6.0.2
-qdrant-client==1.13.2
-rank-bm25==0.2.2
-RapidFuzz==3.12.1
-rapidocr-onnxruntime==1.4.4
-red-black-tree-mod==1.22
-redis==5.1.1
-regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-responses==0.25.6
-rich==14.0.0
-rich-toolkit==0.13.2
-rsa==4.9
-RTFDE==0.1.2
-ruff==0.9.9
-s3transfer==0.11.2
-safehttpx==0.1.6
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.12.0
-semantic-version==2.10.0
-sentence-transformers==3.4.1
-sentencepiece==0.2.0
-shapely==2.0.7
-shellingham==1.5.4
-simple-websocket==1.1.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-snowballstemmer==2.2.0
-soundfile==0.13.1
-soupsieve==2.6
-spandrel==0.4.1
-SQLAlchemy==2.0.37
-starlette==0.27.0
-sympy==1.13.3
-tabulate==0.9.0
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tiktoken==0.8.0
-tinytuya==1.16.1
-tmdbv3api==1.9.0
-tokenizers==0.20.3
-tomlkit==0.13.2
-torch==2.8.0.dev20250621+cu128
-torch-directml==0.2.5.dev240914
-torchaudio==2.7.0+cu118
-torchsde==0.2.6
-torchvision==0.22.0+cu118
-tqdm==4.67.1
-trampoline==0.1.2
-transformers==4.46.2
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.2
-tzlocal==5.2
-ujson==5.10.0
-unstructured==0.16.17
-unstructured-client==0.29.0
-uritemplate==4.1.1
-urllib3==2.4.0
-uvicorn==0.24.0
-validators==0.34.0
-vine==5.1.0
-virtualenv==20.29.2
-vitesy-python-unofficial==0.1.0
-watchfiles==1.0.4
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.2
-Werkzeug==3.0.4
-win_unicode_console==0.5
-wrapt==1.17.2
-wsproto==1.2.0
-xlrd==2.0.1
-XlsxWriter==3.2.2
-xmltodict==0.14.2
-xxhash==3.5.0
-yarl==1.18.3
-youtube-transcript-api==0.6.3
-zipp==3.21.0
-zstandard==0.23.0
+watchdog==6.0.0
+requests==2.23.4
+python-dotenv==1.1.1
