Dockerized version of Watchertower with auto-build on github action and some code improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,15 @@ services:
   watchertoucher:
     image: ciuse99/watchertoucher:latest  # Change to your Docker Hub username if different
     container_name: watchertoucher
-    env_file:
-      - .env
+    environment:
+      - JELLYFIN_URL=http://192.168.178.252:8096
+      - JELLYFIN_API_KEY=youyr api key
+      - LOG_TO_FILE=false
+      - LOG_TO_STDOUT=true
+      - DELAY_SECONDS=60
+      - POLL_TIMEOUT=5
+      - TZ=Europe/Rome
     volumes:
-      - /your/local/media/library:/data:ro   # Replace with your actual media library folder (read-only)
+      - /mnt/jellyfin:/data:ro   # Replace with your actual media library folder (read-only)
       - ./logs:/var/log                      # Local folder for logs if LOG_TO_FILE is true
     restart: unless-stopped
